objects/Task_Master__c.object
<CustomObject>
    <fields>
        <fullName>IsNewTask__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNewTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <label>Offer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Task_Stage__c</fullName>
        <label>Task Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Onboard</fullName>
                </value>
                <value>
                    <fullName>Implement</fullName>
                </value>
                <value>
                    <fullName>Use</fullName>
                </value>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>Adopt</fullName>
                </value>
                <value>
                    <fullName>Optimize</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVITIES</fullName>
                </value>
                <value>
                    <fullName>EXIT CRITERIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>C360 : Static table for all offer activities</description>
    <label>Task Master</label>
    <nameField>
        <displayFormat>T-{000}</displayFormat>
        <label>Task Master Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>